--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,10 @@
+# set inactive/active window styles
+#set -g window-style 'fg=colour247,bg=colour236'
+#set -g window-active-style 'fg=colour250,bg=black'
+
 # default statusbar colors
 set-option -g status-bg colour235 #base02
-set-option -g status-fg colour136 #yellow
+set-option -g status-fg colour244 #yellow
 set-option -g status-attr default
 
 # default window title colors
@@ -9,24 +13,13 @@ set-window-option -g window-status-bg default
 #set-window-option -g window-status-attr dim
 
 # active window title colors
-set-window-option -g window-status-current-fg colour166 #orange
+set-window-option -g window-status-current-fg colour148 #orange
 set-window-option -g window-status-current-bg default
 #set-window-option -g window-status-current-attr bright
 
 # pane border
 set-option -g pane-border-fg colour235 #base02
 set-option -g pane-active-border-fg colour240 #base01
-
-# message text
-set-option -g message-bg colour235 #base02
-set-option -g message-fg colour166 #orange
-
-# pane number display
-set-option -g display-panes-active-colour colour33 #blue
-set-option -g display-panes-colour colour166 #orange
-
-# clock
-set-window-option -g clock-mode-colour colour64 #green
 
 # color
 set -g default-terminal "screen-256color"
